adding test animations

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!--JQuery JS-->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <!-- <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
 
     <!--D3 js-->
     <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -35,30 +35,43 @@
 <body id="body">
     <main>
 		<section id='intro'>
-			<h1>How the city moves</h1>
-		</section>
+			<h1>Citi Bikes, Yellowcabs and Rideshares: How NYC moves when it's cold (and hot) out</h1>
+            <h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
+        </section>
 
 		<section id='scrolly'>
 
-			<figure>
-				<p>0</p>
-			</figure>
-
-			<article>
-				<div class='step' data-step='1'>
-					<p>STEP 1</p>
-				</div>
+            <article>
+                <div class='step' data-step='1'>
+                    <p>To your right are <span class="red">400</span> dots. Each one represents roughly
+                        <span class="red">500 people</span>. In total, these dots account for every New Yorker
+                        that either unlocked a Citi Bike, hailed a taxi or took a rideshare around Grand Central Terminal or
+                        Times Square in March, 2018. March was a particularly variable month for New York City weather. 
+                        On Wednesday March 21, the City recieved <span class="red">over eight inches of snow</span>. 
+                        Nine days later, the high was <span class="red">62 degrees</span>. Let's see how all this weather
+                        changed how New York City moved.
+                    </p>
+                </div>
 				<div class='step' data-step='2'>
-					<p>STEP 2</p>
+					<p>The colored dots indicate which mode of transportation was used. </p>
 				</div>
 				<div class='step' data-step='3'>
-					<p>STEP 3</p>
+					<p>STEP 2</p>
 				</div>
 				<div class='step' data-step='4'>
+					<p>STEP 3</p>
+				</div>
+				<div class='step' data-step='5'>
 					<p>STEP 4</p>
 				</div>
 			</article>
 
+           
+			<figure>
+				<p>0</p>
+			</figure>
+
+			
 			
 		</section>
 
