--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/scrollama"></script>
 
     <!--JQuery JS-->
-    <!-- <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script> -->
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!-- <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
 
