--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <script src="https://unpkg.com/scrollama"></script>
 
     <!--JQuery JS-->
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <!-- <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <!--D3 js-->
     <script src="https://d3js.org/d3.v5.min.js"></script>
