--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 
     <!--Test data json load-->
     <script type="text/javascript" src="./data/brooklyn_bridge_pedestrians_json.json"></script>
+    <script>
+        d3.json("./data/brooklyn_bridge_pedestrians_json.json", function(error,json) {
+	    if (error) return console.log("Error loading data")
+	    //console.log(json)
+        }).then(function(data){
+	        testData = data
+        })
+    </script>
+<!-- 
+    <script type="text/javascript" src="./data/brooklyn_bridge_pedestrians_json.js"></script> -->
 
 </head>
 <body id="body">
