--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <link type="text/css" rel="stylesheet" href="css/GCT.css"/>
 
     <!--Test data json load-->
-    <script type="text/javascript" src="./data/brooklyn_bridge_pedestrians_json.json"></script>
+    <!-- <script type="text/javascript" src="./data/brooklyn_bridge_pedestrians_json.json"></script> -->
     <script>
-        d3.json("./data/brooklyn_bridge_pedestrians_json.json", function(error,json) {
+        d3.json("https://raw.githubusercontent.com/aaronbrezel/Grand_Central_Terminal/master/data/brooklyn_bridge_pedestrians_json.json", function(error,json) {
 	    if (error) return console.log("Error loading data")
 	    //console.log(json)
         }).then(function(data){
