Lots of changes
Re-did citibike data format. Rewrote graphics.js. Altered animation format

All for triage on citibike data

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
 
     <!--Our js-->
+    <script src="js/graphics.js"></script>
     <script src="js/animations.js"></script>
     <script src="js/scrollama.js"></script>
 
