--- a/project_final/index.html
+++ b/project_final/index.html
@@ -23,7 +23,7 @@
 
     <!--Our js-->
     <script src="js/graphics.js"></script>
-    <!-- <script src="js/animations.js"></script> -->
+    <script src="js/animations.js"></script>
     <script src="js/scrollama.js"></script>
 
     <!--Our CSS-->
@@ -66,9 +66,9 @@
 
             <article>
                 <div class='step' data-step='1'>
-                    <p>To your right are <span class="red">400</span> dots. Each one represents roughly
-                        <span class="red">500 people</span>. In total, these dots account for every New Yorker
-                        that either unlocked a Citi Bike, hailed a taxi or took a rideshare around Grand Central Terminal or
+                    <p>To your right are <span class="red">308</span> dots. Each one represents roughly
+                        <span class="red">59 people</span>. In total, these dots account for every New Yorker
+                        that unlocked a Citi Bike, hailed a taxi or took a rideshare around Grand Central Terminal or
                         Times Square in March, 2018. March was a particularly variable month for New York City weather. 
                         On Wednesday March 21, the City recieved <span class="red">over eight inches of snow</span>. 
                         Nine days later, the high was <span class="red">62 degrees</span>. Let's see how all this weather
