Added static visualizations and accompany CSS

--- a/index.html
+++ b/index.html
@@ -33,49 +33,61 @@
 </head>
 <body id="body">
     <main>
-		<section id='intro'>
-			<h1>Citi Bikes, Yellowcabs and Rideshares: How NYC moves when it's cold (and hot) out</h1>
-            <h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
+	<section id='intro'>
+	    	<h1>Citi Bikes, Yellowcabs and Rideshares: How NYC moves when it's cold (and hot) out</h1>
+        	<h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
         </section>
 
-		<section id='scrolly'>
+	<section id='scrolly'>
 
-            <article>
-                <div class='step' data-step='1'>
-                    <p>To your right are <span class="red">400</span> dots. Each one represents roughly
-                        <span class="red">500 people</span>. In total, these dots account for every New Yorker
-                        that either unlocked a Citi Bike, hailed a taxi or took a rideshare around Grand Central Terminal or
-                        Times Square in March, 2018. March was a particularly variable month for New York City weather. 
-                        On Wednesday March 21, the City recieved <span class="red">over eight inches of snow</span>. 
-                        Nine days later, the high was <span class="red">62 degrees</span>. Let's see how all this weather
-                        changed how New York City moved.
-                    </p>
-                </div>
-				<div class='step' data-step='2'>
-					<p>The colored dots indicate which mode of transportation was used. </p>
-				</div>
-				<div class='step' data-step='3'>
-					<p>STEP 2</p>
-				</div>
-				<div class='step' data-step='4'>
-					<p>STEP 3</p>
-				</div>
-				<div class='step' data-step='5'>
-					<p>STEP 4</p>
-				</div>
-			</article>
+        	<article>
+                	<div class='step' data-step='1'>
+                	    	<p>To your right are <span class="red">400</span> dots. Each one represents roughly
+                        	<span class="red">500 people</span>. In total, these dots account for every New Yorker
+               	         	that either unlocked a Citi Bike, hailed a taxi or took a rideshare around Grand Central Terminal or
+                	        Times Square in March, 2018. March was a particularly variable month for New York City weather. 
+                        	On Wednesday March 21, the City recieved <span class="red">over eight inches of snow</span>. 
+                        	Nine days later, the high was <span class="red">62 degrees</span>. Let's see how all this weather
+                        	changed how New York City moved.
+                    	    	</p>
+                	</div>
+			<div class='step' data-step='2'>
+		    		<p>The colored dots indicate which mode of transportation was used. </p>
+			</div>
 
-           
-			<figure>
-				<p>0</p>
-			</figure>
+			<div class='step' data-step='3'>
+		    		<p>STEP 2</p>
+			</div>
 
-			
-			
-		</section>
+			<div class='step' data-step='4'>
+		    		<p>STEP 3</p>
+			</div>
 
+			<div class='step' data-step='5'>
+		   		 <p>STEP 4</p>
+			</div>
+		</article>
+
+	<figure>
+		<p>0</p>
+	</figure>
+
+	</section>
+	
+		<div class="viz" style="display: flex">
+		<img src="./staticViz/finalVizCiti.png" alt="Citibike Wed/Thurs">
+		<p>These three graphs attempt to highlight the effect of snow on normal transport conditions.
+		In all 3, days that are neither snowy nor Wednesday/Thursday are in dark blue, Wednesdays and 
+		Thursdays are in orange, and Snowy Wednesdays/Thursdays are in light blue. The aim is to show
+		that though Wednesdays and Thursdays are normally some of the highest transportation days,
+		snow significantly affects this even when compared in the same month.
+		</p>
+		</div>
+		<div style="display: flex">
+		<img src="./staticViz/finalVizTaxi.png" alt="Citibike Wed/Thurs">
+		<img src="./staticViz/finalVizFHV.png" alt="Citibike Wed/Thurs">
+		</div>
 		<section id='outro'>Thanks for reading!</section>
-	</main>
-
+    </main>
 </body>
 </html>
