--- a/index.html
+++ b/index.html
@@ -66,27 +66,19 @@
 
             <article>
                 <div class='step' data-step='1'>
-                    <p>To your right are <span class="red">308</span> dots. Each one represents roughly
-                        <span class="red">59 people</span>. In total, these dots account for every New Yorker
-                        that unlocked a Citi Bike, hailed a taxi or took a rideshare around Grand Central Terminal or
-                        Times Square in March, 2018. March was a particularly variable month for New York City weather. 
-                        On Wednesday March 21, the City recieved <span class="red">over eight inches of snow</span>. 
-                        Nine days later, the high was <span class="red">62 degrees</span>. Let's see how all this weather
-                        changed how New York City moved.
+                    <p>To your left and right are  many dots. In blue, each of the dots represents about 59 people. In the red, each represents about 3900. Combined, these dots account for every New Yorker that unlocked a Citi Bike, hailed a taxi or took a rideshare around Grand Central Terminal or Times Square in March, 2018. March was a particularly variable month for New York City weather. On Wednesday March 21, the City received over eight inches of snow. Nine days later, the high was 62 degrees. Let's see how all this weather changed how New York City moved.
                     </p>
                 </div>
 				<div class='step' data-step='2'>
-					<p>The colored dots indicate which mode of transportation was used. </p>
+					<p>The colored shapes indicate which mode of transportation was used. Blue circles denote Citibikes, yellow squares denote taxicabs, and green squares denote rideshares, such as Uber.</p>
 				</div>
 				<div class='step' data-step='3'>
-					<p>STEP 2</p>
+					<p>Plotting the number of rides per day for each type of transportation, we see variation in the number of rides taken. Note both the scale difference between the left y-axes of both graphs, which plot rides per day. The right y-axes will demonstrate temperature.</p>
 				</div>
 				<div class='step' data-step='4'>
-					<p>STEP 3</p>
+					<p>Now we see temperature appearing on the graphs, and some of the variation becomes clear. Particularly, Citibike data seems to be sensitive to temperature and this can be seen visually. Note 2 Wednesdays, the 7th and the 21st. Both experienced snowfalls, and we see this impact compared to other weekdays.</p>
 				</div>
-				<div class='step' data-step='5'>
-					<p>STEP 4</p>
-				</div>
+			
 			</article>
 
 			
