--- a/index.html
+++ b/index.html
@@ -84,7 +84,20 @@
 			
 			
 		</section>
-
+			<div class="viz" style="display: flex">
+			<img src="./staticViz/finalVizCiti.png" alt="Citibike Wed/Thurs">
+			<p>These three graphs attempt to highlight the effect of snow on normal transport conditions.
+			In all 3, days that are neither snowy nor Wednesday/Thursday are in dark blue, Wednesdays and 
+			Thursdays are in orange, and Snowy Wednesdays/Thursdays are in light blue. The aim is to show
+			that though Wednesdays and Thursdays are normally some of the highest transportation days,
+			snow significantly affects this even when compared in the same month.
+			</p>
+			</div>
+			<div style="display: flex">
+			<img src="./staticViz/finalVizTaxi.png" alt="Citibike Wed/Thurs">
+			<img src="./staticViz/finalVizFHV.png" alt="Citibike Wed/Thurs">
+			</div>
+			<section id='outro'>Thanks for reading!</section>
 		<section id='outro'>Thanks for reading!</section>
 	</main>
 
