--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		</section>
 			<div class="viz" style="display: flex; align-items: center">
 			<img src="./staticViz/finalVizCiti.png" alt="Citibike Wed/Thurs">
-			<p style="width: 50%">These three graphs attempt to highlight the effect of snow on normal transport conditions.
+			<p style="width: 300px">These three graphs attempt to highlight the effect of snow on normal transport conditions.
 			In all 3, days that are neither snowy nor Wednesday/Thursday are in dark blue, Wednesdays and 
 			Thursdays are in orange, and Snowy Wednesdays/Thursdays are in light blue. The aim is to show
 			that though Wednesdays and Thursdays are normally some of the highest transportation days,
