finshed some desgin things
finished circless
changed style things
(TO DO: add delays for the text and the legend for circls and sqaures)

--- a/project_final/index.html
+++ b/project_final/index.html
@@ -35,7 +35,6 @@
     <main>
 		<section class= "flex-container" id='intro'>
 			<h1>Citi Bikes, Yellowcabs and Rideshares: How NYC moves when it's cold (and hot) out</h1>
-            <h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
             
             <img 
                 src="./svgs/bicycle.svg" 
@@ -96,7 +95,10 @@
 			
 		</section>
 
-		<section id='outro'>Thanks for reading!</section>
+		<section id='outro'>
+            <br>
+            <h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
+        </section>
 	</main>
 
 </body>
