--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <main>
 		<section class= "flex-container" id='intro'>
 			<h1>Citi Bikes, Yellowcabs and Rideshares: How NYC moves when it's cold (and hot) out</h1>
-            <h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
             
             <img 
                 src="./svgs/bicycle.svg" 
@@ -56,6 +55,9 @@
                 width="200px"
             />
         
+        </section>
+        <section id='info'>
+            <!-- a div for the scaled circles -->
         </section>
 
 		<section id='scrolly'>
@@ -84,9 +86,9 @@
 			
 			
 		</section>
-			<div class="viz" style="display: flex; align-items: center">
+			<div class="viz" style="display: flex">
 			<img src="./staticViz/finalVizCiti.png" alt="Citibike Wed/Thurs">
-			<p style="width: 300px">These three graphs attempt to highlight the effect of snow on normal transport conditions.
+			<p id="info" color = "white">These three graphs attempt to highlight the effect of snow on normal transport conditions.
 			In all 3, days that are neither snowy nor Wednesday/Thursday are in dark blue, Wednesdays and 
 			Thursdays are in orange, and Snowy Wednesdays/Thursdays are in light blue. The aim is to show
 			that though Wednesdays and Thursdays are normally some of the highest transportation days,
@@ -96,9 +98,10 @@
 			<div style="display: flex">
 			<img src="./staticViz/finalVizTaxi.png" alt="Citibike Wed/Thurs">
 			<img src="./staticViz/finalVizFHV.png" alt="Citibike Wed/Thurs">
-			</div>
-			<section id='outro'>Thanks for reading!</section>
-		<section id='outro'>Thanks for reading!</section>
+            <section id='outro'>
+                <br>
+                <h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
+            </section>
 	</main>
 
 </body>
