--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		</section>
 			<div class="viz" style="display: flex">
 			<img src="./staticViz/finalVizCiti.png" alt="Citibike Wed/Thurs">
-			<p id="info" color = "white">These three graphs attempt to highlight the effect of snow on normal transport conditions.
+			<p id="info-viz" style="color: whitesmoke">These three graphs attempt to highlight the effect of snow on normal transport conditions.
 			In all 3, days that are neither snowy nor Wednesday/Thursday are in dark blue, Wednesdays and 
 			Thursdays are in orange, and Snowy Wednesdays/Thursdays are in light blue. The aim is to show
 			that though Wednesdays and Thursdays are normally some of the highest transportation days,
@@ -97,7 +97,8 @@
 			</div>
 			<div style="display: flex">
 			<img src="./staticViz/finalVizTaxi.png" alt="Citibike Wed/Thurs">
-			<img src="./staticViz/finalVizFHV.png" alt="Citibike Wed/Thurs">
+            <img src="./staticViz/finalVizFHV.png" alt="Citibike Wed/Thurs">
+			</div>
             <section id='outro'>
                 <br>
                 <h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
