making static viz more beautiful

--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 			
 			
 		</section>
-			<div class="viz" style="display: flex">
-			<img src="./staticViz/finalVizCiti.png" alt="Citibike Wed/Thurs">
+	    <section id="photos">
+		    	<img src="./staticViz/finalVizCiti.png" alt="Citibike Wed/Thurs">
+			<!-- <div class="viz" style="display: flex"> 
 			<p id="info-viz" style="color: whitesmoke">These three graphs attempt to highlight the effect of snow on normal transport conditions.
 			In all 3, days that are neither snowy nor Wednesday/Thursday are in dark blue, Wednesdays and 
 			Thursdays are in orange, and Snowy Wednesdays/Thursdays are in light blue. The aim is to show
@@ -95,10 +96,11 @@
 			snow significantly affects this even when compared in the same month.
 			</p>
 			</div>
-			<div style="display: flex">
-			<img src="./staticViz/finalVizTaxi.png" alt="Citibike Wed/Thurs">
-            <img src="./staticViz/finalVizFHV.png" alt="Citibike Wed/Thurs">
-			</div>
+			<div style="display: flex"> -->
+			<img src="./staticViz/finalVizTaxi.png" alt="Taxi Wed/Thurs">
+            		<img src="./staticViz/finalVizFHV.png" alt="FHV Wed/Thurs">
+			<!-- </div> -->
+	    </section>
             <section id='outro'>
                 <br>
                 <h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
