hopefully this works for making the images more pretty

--- a/index.html
+++ b/index.html
@@ -86,21 +86,35 @@
 			
 			
 		</section>
-	    <section id="photos">
-		    	<img src="./staticViz/finalVizCiti.png" alt="Citibike Wed/Thurs">
-			<!-- <div class="viz" style="display: flex"> 
-			<p id="info-viz" style="color: whitesmoke">These three graphs attempt to highlight the effect of snow on normal transport conditions.
-			In all 3, days that are neither snowy nor Wednesday/Thursday are in dark blue, Wednesdays and 
-			Thursdays are in orange, and Snowy Wednesdays/Thursdays are in light blue. The aim is to show
-			that though Wednesdays and Thursdays are normally some of the highest transportation days,
-			snow significantly affects this even when compared in the same month.
-			</p>
-			</div>
-			<div style="display: flex"> -->
-			<img src="./staticViz/finalVizTaxi.png" alt="Taxi Wed/Thurs">
-            		<img src="./staticViz/finalVizFHV.png" alt="FHV Wed/Thurs">
-			<!-- </div> -->
-	    </section>
+		    <table style="width:100%">
+  			<tr>
+    				<td><img src="./staticViz/finalVizCiti.png" alt="Citibike Wed/Thurs"></td>
+				<td>
+					<p id="info-viz" style="color: whitesmoke">These three graphs attempt to highlight the effect 
+					of snow on normal transport conditions. In all 3, days that are neither snowy nor Wednesday/Thursday 
+					are in dark blue, Wednesdays and Thursdays are in orange, and Snowy Wednesdays/Thursdays are in light blue.
+					</p>
+				</td>
+  			</tr>
+  			<tr>
+    				<td><img src="./staticViz/finalVizTaxi.png" alt="Taxi Wed/Thurs"></td>
+				<td>
+					<p id="info-viz" style="color: whitesmoke">The aim is to show that though Wednesdays and Thursdays 
+					are normally some of the highest transportation days, snow significantly affects this even when 
+					compared in the same month.
+					</p>
+				</td>
+  			</tr>
+  			<tr>
+    				<td><img src="./staticViz/finalVizFHV.png" alt="FHV Wed/Thurs"></td>
+				<td>
+					<p id="info-viz" style="color: whitesmoke">The effect is dulled, but still present, in FHVs.
+					We theorize this is due to the ability to order a FVH from inside, which is not common in cabs
+					or citibikes.
+					</p>
+				</td>
+  			</tr>
+		</table>
             <section id='outro'>
                 <br>
                 <h3>An Intro to Data Vis project by Aaron Brezel, Aditi Hudli, Tristan Orlofski and Mythili Shankara</h3>
